--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,7 +40,7 @@ dependencies:
   excel: ^4.0.2
   file_picker: ^8.0.3
   data_table_2: ^2.5.10
-  intl: ^0.19.0
+  intl: ^0.20.2
   get_it: ^7.6.7
   path_provider: ^2.1.3
   path: ^1.9.0
