--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.1.3
   path: ^1.9.0
   sqflite: ^2.4.2
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
