--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   sqflite_common_ffi: ^2.3.3
   provider: ^6.1.2
-  excel: ^4.0.2
+  excel: ^4.0.6  # Updated to latest version for better compatibility
   file_picker: ^8.0.3
   data_table_2: ^2.5.10
   intl: ^0.20.2
